--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import Navbar from "../components/Navbar.astro";
 ---
 
 <html lang="en">
@@ -7,6 +8,7 @@
 		<meta name="viewport" content="width=device-width" />
 	</head>
 	<body>
+		<Navbar/>
 		<h1>Hello, astro</h1>
 	</body>
 </html>
