--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import Footer from "../components/Footer.astro";
 import Navbar from "../components/Navbar.astro";
 ---
 
@@ -9,6 +10,6 @@ import Navbar from "../components/Navbar.astro";
 	</head>
 	<body>
 		<Navbar/>
-		<h1>Hello, astro</h1>
+		<Footer/>
 	</body>
 </html>
