--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,21 +1,59 @@
-h1 {
-  @apply text-4xl;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@font-face {
+  font-family: Poppins;
+  src: url("/Poppins-Regular.ttf") format("truetype");
+  font-weight: 400;  
 }
-h2 {
-  @apply text-3xl;
+@font-face {
+  font-family: Poppins;
+  src: url("/Poppins-Medium.ttf") format("truetype");
+  font-weight: 500;
 }
-h3 { 
-  @apply text-2xl;
+@font-face {
+  font-family: Poppins;
+  src: url("/Poppins-Bold.ttf") format("truetype");
+  font-weight: 700;
 }
-h4 {
-  @apply text-xl;
+@font-face {
+  font-family: Poppins;
+  src: url("/Poppins-MediumItalic.ttf") format("truetype");
+  font-weight: 500;
+  font-style: italic;
 }
-h5 {
-  @apply text-lg;
+@font-face {
+  font-family: Poppins;
+  src: url("/Poppins-BoldItalic.ttf") format("truetype");
+  font-weight: 700;
+  font-style: italic;
 }
-h6 {
-  @apply text-base;
-}
-h1, h2, h3, h4, h5, h6 {
-  @apply font-bold;
+@layer base {
+  ol {
+    @apply list-decimal list-inside marker:font-bold marker:text-gold-accent;
+  }
+  * {
+    @apply font-default font-normal;
+  }
+  h1 {
+    @apply text-4xl;
+  }
+  h2 {
+    @apply text-3xl;
+  }
+  h3 { 
+    @apply text-2xl;
+  }
+  h4 {
+    @apply text-xl;
+  }
+  h5 {
+    @apply text-lg;
+  }
+  h6 {
+    @apply text-base;
+  }
+  h1, h2, h3, h4, h5, h6 {
+    @apply font-bold;
+  }
 }
