--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -4,7 +4,7 @@ import Btn from "./Btn.astro";
 const { type } = Astro.props;
 ---
 
-<section class="px-6 py-3 grow-0 xl:basis-80 shadow-card rounded-md">
+<section class="">
   <div>
     <div class="text-2xl font-semibold flex my-2 items-center gap-2">
       {type.toLowerCase() === "vision" ? <svg class="w-12 h-12" viewBox="0 0 48 48" fill="none"
