style(components): :lipstick: update footer layout

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,3 +1,6 @@
-<footer>
-  © 2022 La Consolacion College Tanauan
+<footer class="bg-blue-accent text-white px-5 py-3">
+  <div class="max-w-7xl m-auto flex items-center gap-4">
+    <h2>LCCT</h2>
+    <p>© 2020 La Consolacion College Tanauan</p>
+  </div>
 </footer>
