style: update layout

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -5,8 +5,8 @@ import Default from "../layouts/Default.astro";
 import "../styles/globals.css";
 ---
 
-<Navbar client:load />
-<Default>
-  <h1>Page not found</h1>
+<Default
+  title="Lcctanauan - The Premiere Catholic Educational Institution in Tanauan, Batangas"
+>
+  <h1>Page not found 😢</h1>
 </Default>
-<Footer />
