feat(components): :label: :art: add div and image (presentational)

--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -1,12 +1,25 @@
 ---
 interface Props {
-  bgSrc: string;
+  bgSrc: ImageMetadata;
   bgAlt: string;
 }
 import { Image } from "@astrojs/image/components";
 const { bgSrc, bgAlt } = Astro.props;
 ---
 
-<section class="min-h-screen">
-  <Image src={bgSrc} alt={bgAlt} />
+<section class="h-full relative">
+  <Image
+    src={bgSrc}
+    alt={bgAlt}
+    width={1920}
+    aspectRatio={16 / 9}
+    style={"height:100vh;object-fit: cover;width:100%;"}
+    class="h-screen object-cover w-full absolute top-0"
+  />
+  <div
+    class="h-screen absolute top-0 w-full"
+    style="background-image:linear-gradient(180deg, rgba(0, 0, 0, 0.46) 0%, rgba(0, 0, 0, 0.26) 51.56%, rgba(0, 0, 0, 0) 100%);"
+  >
+  </div>
+  <slot />
 </section>
