--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -38,7 +38,7 @@
     @apply list-decimal list-inside marker:font-bold marker:text-blue-accent;
   }
   * {
-    @apply font-default font-normal;
+    @apply font-default font-normal leading-[1.7];
   }
   h1 {
     @apply text-4xl;
@@ -59,6 +59,9 @@
     @apply text-base;
   }
   h1, h2, h3, h4, h5, h6 {
-    @apply font-bold;
+    @apply font-bold leading-normal;
+  }
+  h1, h2, h3, h4, h5, h6, p {
+    @apply my-4;
   }
 }
