--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -14,7 +14,7 @@ const { bgSrc, bgAlt } = Astro.props;
     width={1920}
     aspectRatio={16 / 9}
     style={"height:100vh;object-fit: cover;width:100%;"}
-    class="h-screen object-cover w-full absolute top-0"
+    class="h-screen object-cover w-full top-0"
   />
   <div
     class="h-screen absolute top-0 w-full"
