style(page): :lipstick: add screen height to section

--- a/src/pages/home.astro
+++ b/src/pages/home.astro
@@ -43,7 +43,7 @@ import Fly from "@components/Fly.svelte";
         </div>
       </div>
     </HeroSection>
-    <section>
+    <section class="min-h-screen">
       <div class="max-w-7xl m-auto">
         <CTASection
           imageMeta={secondHero}
